PHP 4                                                                      NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2003, Version 4.3.4
- Fixed disk_total_space() and disk_free_space() under FreeBSD. (Jon Parise)
- Fixed crash bug when non-existing save/serializer handler was used. (Jani)
- Fixed bug #25166 (WDDX serializer handler missing in win32). (Jani)
- Fixed bug #25239 (ftp_fopen_wrapper not RFC compliant). (Sara)

25 Aug 2003, Version 4.3.3
- Upgraded the bundled Expat library to version 1.95.6. (Jani)
- Upgraded the bundled PCRE library to version 4.3. (Andrei)
- Upgraded the bundled GD library to version GD 2.0.15. (Ilia)
- Improved the engine to use POSIX/socket IO where feasible. (Sascha)
- Improved the IMAP extension (Ilia)
  . Added imap_timeout() function. (bug #24161)
  . Added optional 'charset' parameter to imap_search() and imap_sort().
    (bug #22505)
- Improved the InterBase extension (Daniela)
  . Added transaction constants: IBASE_REC_VERSION, IBASE_REC_NO_VERSION, 
    IBASE_WRITE, IBASE_WAIT and IBASE_CONCURRENCY. (bugs #8797, #23887)
  . Made numeric/decimal datatype handling work on any platform.
- Improved the NSAPI SAPI module (Uwe Schindler)
  . Added possibility to use PHP to generate HTTP error pages (404 Not Found..)
  . Added possibility to use PHP to generate directory listings for directories
    without index.html
  . php4_init (magnus.conf): new parameter to set alternate path to php.ini.
    (php_ini="/path/to/php.ini")
  . php4_execute (obj.conf): support for additional php.ini values.
    Allows different settings per virtual server. 
    (See sapi/nsapi/nsapi-readme.txt for more information)
  . Added support for virtual().
  . Added nsapi_request_headers() and nsapi_response_headers() with aliases 
    for apache compatibility.
  . Added "nsapi.read_timeout" php.ini option. 
  . Synced $_SERVER variables to be similar to Apache variables.